syntax = "proto3";

package de.ruoff.consistency.service.session;

service SessionService {
    rpc CreateSession (CreateSessionRequest) returns (CreateSessionResponse);
    rpc JoinSession (JoinSessionRequest) returns (JoinSessionResponse);
    rpc GetSession (GetSessionRequest) returns (GetSessionResponse);
    rpc LeaveSession (LeaveSessionRequest) returns (LeaveSessionResponse);
    rpc GetOpenSessionForPlayer (PlayerRequest) returns (GetSessionResponse);
    rpc InvitePlayer (InvitePlayerRequest) returns (InvitePlayerResponse);
}

message CreateSessionRequest {
    string playerA = 1;
}

message CreateSessionResponse {
    string sessionId = 1;
}

message JoinSessionRequest {
    string sessionId = 1;
    string playerB = 2;
}

message JoinSessionResponse {
    bool success = 1;
}

message GetSessionRequest {
    string sessionId = 1;
}

message GetSessionResponse {
    string sessionId = 1;
    string playerA = 2;
    string playerB = 3;
    string status = 4;
}

message LeaveSessionRequest {
    string sessionId = 1;
    string username = 2;
}

message LeaveSessionResponse {
    bool success = 1;
}

message PlayerRequest {
    string player = 1;
}

message InvitePlayerRequest {
    string requester = 1;
    string receiver = 2;
}

message InvitePlayerResponse {
    bool success = 1;
}
